00_backup/eksdev/devops/monitoring/grafana/grafana-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  sessionAffinity: None
