00_backup/eksdev/devops/monitoring/grafana/grafana-istio-gw-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gw
  namespace: monitoring
spec:
  selector:
    istio: devops-istio-ingressgateway
  servers:
  - hosts:
    - eks-grafana.klsdev.kakaoinsure.net
    port:
      name: grafana
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  gateways:
  - grafana-gw
  hosts:
  - grafana.monitoring.svc.cluster.local
  - eks-grafana.klsdev.kakaoinsure.net
  http:
  - route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana-dr
  namespace: monitoring
spec:
  host: grafana.monitoring.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 50s
